Remove redundant AttributeBarHandleProvider